--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "https://pub-32543d5533964f0a82d026c830faa83a.r2.dev/horseRacing/Build";
-      var loaderUrl = buildUrl + "/horseRacing.loader.js";
+      var loaderUrl = buildUrl + "/horseRacing_Gz.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/horseRacing.data.br",
-        frameworkUrl: buildUrl + "/horseRacing.framework.js.br",
-        codeUrl: buildUrl + "/horseRacing.wasm.br",
+        dataUrl: buildUrl + "/horseRacing_Gz.data.gz",
+        frameworkUrl: buildUrl + "/horseRacing_Gz.framework.js.gz",
+        codeUrl: buildUrl + "/horseRacing_Gz.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DucNV",
         productName: "HorseRacing_DucNV",
