--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "https://pub-32543d5533964f0a82d026c830faa83a.r2.dev/horseRacing/Build";
+      var buildUrl = "https://pub-32543d5533964f0a82d026c830faa83a.r2.dev/horseRacing_Gz/Build";
       var loaderUrl = buildUrl + "/horseRacing_Gz.loader.js";
       var config = {
         arguments: [],
